Fix z-index issues

--- a/backend/src/assets/css/header.css
+++ b/backend/src/assets/css/header.css
@@ -3,7 +3,11 @@
 .header {
   position: sticky !important;
   top: 0;
-  z-index: 101;
+  z-index: 1400;
+}
+
+.menu {
+  z-index: 1401 !important;
 }
 
 .header-action {
@@ -21,7 +25,7 @@
 
 /* Device width is less than or equal to 960px */
 
-@media only screen and (width <= 960px) {
+@media only screen and (width <=960px) {
   .header {
     min-height: 56px;
   }
@@ -33,7 +37,7 @@
 
 /* Device width is greater than or equal to 960px */
 
-@media only screen and (width >= 960px) {
+@media only screen and (width >=960px) {
   .header {
     min-height: 64px;
   }
