--- a/backend/src/assets/css/supplier.css
+++ b/backend/src/assets/css/supplier.css
@@ -66,7 +66,7 @@ div.supplier {
 
   .supplier div.col-2 {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
   }
 }
 
